cmake_minimum_required(VERSION 3.15)
PROJECT(cec17)
set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
ADD_EXECUTABLE(cec17_test "test.cc")
ADD_EXECUTABLE(cec17_testrandom "testrandom.cc")
ADD_EXECUTABLE(cec17_testsolis "testsolis.cc")
ADD_LIBRARY("cec17_test_func" SHARED "cec17_test_func.c" "cec17.c")
TARGET_LINK_LIBRARIES(cec17_test "cec17_test_func")
TARGET_LINK_LIBRARIES(cec17_testrandom "cec17_test_func")
TARGET_LINK_LIBRARIES(cec17_testsolis "cec17_test_func")
